[gd_scene load_steps=14 format=2]

[ext_resource path="res://windows/base_window.tscn" type="PackedScene" id=1]
[ext_resource path="res://themes/twitter.tres" type="Theme" id=2]
[ext_resource path="res://fonts/m5x7_med.tres" type="DynamicFont" id=3]
[ext_resource path="res://images/twitter/twitter_header.png" type="Texture" id=4]
[ext_resource path="res://scripts/twitter/Tweet.gd" type="Script" id=5]
[ext_resource path="res://images/twitter/twitter_popup.png" type="Texture" id=6]
[ext_resource path="res://themes/twitter_secondary.tres" type="Theme" id=7]
[ext_resource path="res://scripts/twitter/Confirm.gd" type="Script" id=8]
[ext_resource path="res://scripts/twitter/Controller.gd" type="Script" id=9]
[ext_resource path="res://images/twitter/wrong_tweet.png" type="Texture" id=10]
[ext_resource path="res://images/twitter/correct_tweet.png" type="Texture" id=11]
[ext_resource path="res://images/twitter/avatar_color.png" type="Texture" id=12]
[ext_resource path="res://scripts/twitter/BtnFollow.gd" type="Script" id=13]

[node name="Node2D" instance=ExtResource( 1 )]
dimensions = Vector2( 320, 420 )
color = Color( 0.113725, 0.631373, 0.94902, 1 )
bg_color = Color( 0.12549, 0.145098, 0.192157, 1 )
title = "clucker"

[node name="Body" parent="." index="0"]
margin_right = 320.0
margin_bottom = 420.0

[node name="Title" parent="Body" index="0"]
margin_right = 320.0

[node name="WindowClose" parent="Body/Title" index="0"]
margin_left = 306.0
margin_right = 320.0

[node name="Controller" type="Control" parent="Body" index="1"]
mouse_filter = 1
theme = ExtResource( 2 )
script = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="Body/Controller" index="0"]
margin_top = 162.0
margin_right = 319.0
margin_bottom = 408.0
mouse_filter = 2
color = Color( 0.0980392, 0.113725, 0.152941, 1 )

[node name="TwitterHeader" type="Sprite" parent="Body/Controller" index="1"]
position = Vector2( 160, 87 )
texture = ExtResource( 4 )
offset = Vector2( -0.5, 0 )

[node name="Username" type="Label" parent="Body/Controller/TwitterHeader" index="0"]
margin_left = -142.0
margin_top = 20.0
margin_right = 51.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 3 )
text = "@badcop"
clip_text = true

[node name="Followers" type="Label" parent="Body/Controller/TwitterHeader" index="1"]
margin_left = 38.0
margin_top = 23.0
margin_right = 144.0
margin_bottom = 37.0
text = "42.5K Followers"
align = 2

[node name="AvatarColor" type="Sprite" parent="Body/Controller/TwitterHeader" index="2"]
modulate = Color( 0.862745, 0.478431, 0.141176, 1 )
position = Vector2( -103, -17 )
texture = ExtResource( 12 )

[node name="BtnFollow" type="Button" parent="Body/Controller/TwitterHeader" index="3"]
margin_left = 65.0
margin_top = -13.0
margin_right = 145.0
margin_bottom = 19.0
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = "Follow"
script = ExtResource( 13 )

[node name="Tweets" type="Control" parent="Body/Controller" index="2"]
mouse_filter = 1

[node name="ColorRect6" type="ColorRect" parent="Body/Controller/Tweets" index="0"]
margin_top = 164.0
margin_right = 319.0
margin_bottom = 223.0
mouse_filter = 1
mouse_default_cursor_shape = 2
color = Color( 0.14902, 0.172549, 0.231373, 1 )
script = ExtResource( 5 )

[node name="Tweet" type="Label" parent="Body/Controller/Tweets/ColorRect6" index="0"]
margin_left = 11.0
margin_top = 6.0
margin_right = 312.0
margin_bottom = 35.0
text = "Sample Tweet 1"
autowrap = true
clip_text = true

[node name="Timestamp" type="Label" parent="Body/Controller/Tweets/ColorRect6" index="1"]
margin_left = 165.0
margin_top = 41.0
margin_right = 315.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0.333333, 0.372549, 0.470588, 1 )
text = "7 years ago"
align = 2
autowrap = true
clip_text = true

[node name="WrongTweet" type="Sprite" parent="Body/Controller/Tweets/ColorRect6" index="2"]
visible = false
position = Vector2( 3, 1 )
texture = ExtResource( 10 )
centered = false

[node name="CorrectTweet" type="Sprite" parent="Body/Controller/Tweets/ColorRect6" index="3"]
visible = false
position = Vector2( 128, 3 )
texture = ExtResource( 11 )
centered = false

[node name="ColorRect5" type="ColorRect" parent="Body/Controller/Tweets" index="1"]
margin_top = 225.0
margin_right = 319.0
margin_bottom = 284.0
mouse_filter = 1
mouse_default_cursor_shape = 2
color = Color( 0.14902, 0.172549, 0.231373, 1 )
script = ExtResource( 5 )

[node name="Tweet" type="Label" parent="Body/Controller/Tweets/ColorRect5" index="0"]
margin_left = 11.0
margin_top = 6.0
margin_right = 312.0
margin_bottom = 35.0
text = "Sample Tweet 2"
autowrap = true
clip_text = true

[node name="Timestamp" type="Label" parent="Body/Controller/Tweets/ColorRect5" index="1"]
margin_left = 165.0
margin_top = 41.0
margin_right = 315.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0.333333, 0.372549, 0.470588, 1 )
text = "7 years ago"
align = 2
autowrap = true
clip_text = true

[node name="WrongTweet" type="Sprite" parent="Body/Controller/Tweets/ColorRect5" index="2"]
visible = false
position = Vector2( 3, 1 )
texture = ExtResource( 10 )
centered = false

[node name="CorrectTweet" type="Sprite" parent="Body/Controller/Tweets/ColorRect5" index="3"]
visible = false
position = Vector2( 128, 3 )
texture = ExtResource( 11 )
centered = false

[node name="ColorRect7" type="ColorRect" parent="Body/Controller/Tweets" index="2"]
margin_top = 286.0
margin_right = 319.0
margin_bottom = 345.0
mouse_filter = 1
mouse_default_cursor_shape = 2
color = Color( 0.14902, 0.172549, 0.231373, 1 )
script = ExtResource( 5 )

[node name="Tweet" type="Label" parent="Body/Controller/Tweets/ColorRect7" index="0"]
margin_left = 11.0
margin_top = 6.0
margin_right = 312.0
margin_bottom = 38.0
text = "Sample Tweet 3"
autowrap = true
clip_text = true

[node name="Timestamp" type="Label" parent="Body/Controller/Tweets/ColorRect7" index="1"]
margin_left = 165.0
margin_top = 41.0
margin_right = 315.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0.333333, 0.372549, 0.470588, 1 )
text = "7 years ago"
align = 2
autowrap = true
clip_text = true

[node name="WrongTweet" type="Sprite" parent="Body/Controller/Tweets/ColorRect7" index="2"]
visible = false
position = Vector2( 3, 1 )
texture = ExtResource( 10 )
centered = false

[node name="CorrectTweet" type="Sprite" parent="Body/Controller/Tweets/ColorRect7" index="3"]
visible = false
position = Vector2( 128, 3 )
texture = ExtResource( 11 )
centered = false

[node name="ColorRect8" type="ColorRect" parent="Body/Controller/Tweets" index="3"]
margin_top = 347.0
margin_right = 319.0
margin_bottom = 406.0
mouse_filter = 1
mouse_default_cursor_shape = 2
color = Color( 0.14902, 0.172549, 0.231373, 1 )
script = ExtResource( 5 )

[node name="Tweet" type="Label" parent="Body/Controller/Tweets/ColorRect8" index="0"]
margin_left = 11.0
margin_top = 6.0
margin_right = 312.0
margin_bottom = 38.0
text = "Sample Tweet 4 is a really long tweet that goes on and on and is probably more than 140 characters but ohwell"
autowrap = true
clip_text = true

[node name="Timestamp" type="Label" parent="Body/Controller/Tweets/ColorRect8" index="1"]
margin_left = 165.0
margin_top = 41.0
margin_right = 315.0
margin_bottom = 56.0
custom_colors/font_color = Color( 0.333333, 0.372549, 0.470588, 1 )
text = "7 years ago"
align = 2
autowrap = true
clip_text = true

[node name="WrongTweet" type="Sprite" parent="Body/Controller/Tweets/ColorRect8" index="2"]
visible = false
position = Vector2( 3, 1 )
texture = ExtResource( 10 )
centered = false

[node name="CorrectTweet" type="Sprite" parent="Body/Controller/Tweets/ColorRect8" index="3"]
visible = false
position = Vector2( 128, 3 )
texture = ExtResource( 11 )
centered = false

[node name="Confirm" type="Control" parent="Body/Controller" index="3"]
visible = false
mouse_filter = 1
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="Body/Controller/Confirm" index="0"]
margin_top = 14.0
margin_right = 319.0
margin_bottom = 420.0
color = Color( 0, 0, 0, 0.54902 )

[node name="TwitterPopup" type="Sprite" parent="Body/Controller/Confirm" index="1"]
position = Vector2( 160, 216 )
texture = ExtResource( 6 )

[node name="Label3" type="Label" parent="Body/Controller/Confirm" index="2"]
margin_left = 40.0
margin_top = 156.0
margin_right = 279.0
margin_bottom = 182.0
custom_fonts/font = ExtResource( 3 )
text = "Warning"
align = 1

[node name="Label" type="Label" parent="Body/Controller/Confirm" index="3"]
margin_left = 60.0
margin_top = 193.0
margin_right = 279.0
margin_bottom = 222.0
text = "This post looks old! Are you sure you want to re-share it anyways?"
autowrap = true

[node name="BtnShare" type="Button" parent="Body/Controller/Confirm" index="4"]
margin_left = 188.0
margin_top = 240.0
margin_right = 268.0
margin_bottom = 272.0
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = "Share"

[node name="BtnCancel" type="Button" parent="Body/Controller/Confirm" index="5"]
margin_left = 52.0
margin_top = 240.0
margin_right = 132.0
margin_bottom = 272.0
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource( 7 )
enabled_focus_mode = 0
text = "Cancel"

[connection signal="pressed" from="Body/Controller/Confirm/BtnShare" to="Body/Controller" method="_on_BtnShare_pressed"]
[connection signal="pressed" from="Body/Controller/Confirm/BtnShare" to="Body/Controller/Confirm" method="_on_BtnShare_pressed"]
[connection signal="pressed" from="Body/Controller/Confirm/BtnCancel" to="Body/Controller/Confirm" method="_on_BtnCancel_pressed"]
